Closed Bug 322689 Opened 20 years ago Closed 18 years ago

ASSERTION: Wrapping frame should be block-level: 'aLastRS->frame->GetStyl

Categories

(Core :: Layout, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: martijn.martijn, Unassigned)

References

Details

(Keywords: assertion, testcase)

Attachments

(2 files)

See upcoming testcase, Mozilla gives an assertion when loading the testcase: ###!!! ASSERTION: Wrapping frame should be block-level: 'aLastRS->frame->GetStyl eDisplay()->IsBlockLevel()', file c:/mozilla/mozilla/layout/generic/nsBlockFrame .cpp, line 610
Attached file testcase
This is fixed by the patch for bug 322348
Depends on: 322348
Er... no. I was testing the wrong thing. Ignore comment 2.
No longer depends on: 322348
This assert was introduced in bug 294934. It seems to me that we want the "looks like a block from the inside" test here (the one we don't have yet).
Blocks: 294934
Still happens on trunk.
So the parent frame in this case is an nsHTMLButtonControlFrame. I think this assert is basically bogus: all sorts of non-block things can contain a blockframe.
Attached patch patch?Splinter Review
So the assertion can be removed? Or you want a better assertion like you mentioned in comment 4?
Attachment #275485 - Flags: review?(bzbarsky)
Comment on attachment 275485 [details] [diff] [review] patch? Yeah, I think this is the best we can do.
Attachment #275485 - Flags: superreview+
Attachment #275485 - Flags: review?(bzbarsky)
Attachment #275485 - Flags: review+
Comment on attachment 275485 [details] [diff] [review] patch? Removal of a useless assertion.
Attachment #275485 - Flags: approval1.9?
Comment on attachment 275485 [details] [diff] [review] patch? a1.9=dbaron
Attachment #275485 - Flags: approval1.9? → approval1.9+
Checking in nsBlockFrame.cpp; /cvsroot/mozilla/layout/generic/nsBlockFrame.cpp,v <-- nsBlockFrame.cpp new revision: 3.856; previous revision: 3.855 done Checked in.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: