Bug 322689 - ASSERTION: Wrapping frame should be block-level: aLastRS->frame->GetStyl, r+sr=bzbarsky, a=dbaron